fixed the maing content left padding and added gap between cards fixed the main content titles and styled them

--- a/styles.css
+++ b/styles.css
@@ -190,14 +190,22 @@ body {
     grid-template-rows: 1fr;
     grid-column: 2 / 3;
     grid-row: 2 / 3;
-    padding: 20px;
     box-sizing: border-box;
+    gap: 25px;
 }
 
-.mainContainer-left {
+.main-title {
+    margin: 20px;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.cardList {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr);
+    padding: 0;
+    margin: 0;
 }
 
 .mainContainer-right {
@@ -217,6 +225,8 @@ body {
 
 .card:hover {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), inset 8px 0 0 0 var(--accent);
+    transition: transform 0.2s;
+    transform: scale(1.02);
 }
 
 .cardBtn {
